# icvs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  README.zh.md
.github/workflows/: ci.yml
docs/: api.en.md  api.md  api.zh.md  cli.en.md  cli.md  cli.zh.md  development.en.icvs  development.icvs  development.zh.icvs  examples.en.md  examples.md  examples.zh.md  project.en.icvs  project.icvs  project.zh.icvs  quickstart.en.icvs  quickstart.icvs  quickstart.zh.icvs  syntax.en.md  syntax.md  syntax.zh.md
lsp/: Cargo.toml
lsp/src/: main.rs
preview/: index.html
py/: Cargo.toml  README.md  pyproject.toml
py/src/: lib.rs
src/: agent_format.rs  ast.rs  error.rs  exporter.rs  lib.rs  main.rs  md_converter.rs  parser.rs  resolver.rs  template.rs  validator.rs
tests/: integration.rs
tests/fixtures/: include-child.icvs  include-circular-a.icvs  include-circular-b.icvs  include-missing.icvs  include-root.icvs  invalid-cycle.icvs  parse-error.icvs  prd-example.icvs  simple.icvs  with-condition.icvs  with-targets.icvs
vscode/: .vscodeignore  instructcanvas-0.1.0.vsix  instructcanvas-0.2.0.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.js  extension.ts
vscode/syntaxes/: icvs.tmLanguage.json
wasm/: Cargo.toml  LICENSE
wasm/src/: lib.rs
