[package]
name = "icvs-lsp"
version = "0.2.0"
edition = "2021"
description = "Language Server Protocol implementation for InstructCanvas (.icvs)"
license = "MIT"
repository = "https://github.com/crediblemark-official/icvs.git"

[dependencies]
icvs = { path = ".." }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
