[package]
name = "icvs-wasm"
version = "0.2.2"
edition = "2021"
description = "WASM bindings for InstructCanvas (.icvs) parser"
license = "MIT"
repository = "https://github.com/crediblemark-official/icvs.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
icvs = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
